changed page height stop overflow

--- a/PCMS.FrontEnd/src/app/views/dashboard/home/dashboard-home-page.component.css
+++ b/PCMS.FrontEnd/src/app/views/dashboard/home/dashboard-home-page.component.css
@@ -9,7 +9,7 @@
 .container {
   display: grid;
   width: 100%;
-  height: 100%;
+  height: 70%;
   grid-template-rows: 1fr 1fr;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-areas:
